Modified ~update to run update.bat if we're on windows instead of complaining that we're not supporting updates on this platform
git-svn-id: https://jwutils.googlecode.com/svn/trunk@1280 9038e2a8-f00e-11dd-89c5-9df526a60542